changed height of body to svh hopefully fixes mobile cutting off with bottom browser bar

--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
 
 .grey-body {
     background-color: rgb(70, 70, 70);
-    height: 100vh;
+    height: 100svh;
     /* min-height: ; */
     /* overflow: auto; */
 }
